deps/juliacall_macros/tests/ui/non_ffi_option.stderr
error: #[julia] function `bad_option` returns Option with non-FFI-compatible type `Vec < i32 >`. Use a primitive or #[repr(C)] type instead.
 --> tests/ui/non_ffi_option.rs:4:1
  |
4 | #[julia]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `julia` (in Nightly builds, run with -Z macro-backtrace for more info)
